--- a/components/jasper-reports/pom.xml
+++ b/components/jasper-reports/pom.xml
@@ -3,10 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>digytal-code</groupId>
-	<artifactId>jasper-resports</artifactId>
+	<artifactId>jasper-reports</artifactId>
 	<version>1.0</version>
 	<name>Componente para impressão de relatórios Jasper</name>
-
+	<properties>
+		<java.version>1.8</java.version>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<dependencies>
 		<!-- JasperReports -->
 		<dependency>
