--- a/spring/spring-jpa-audit/src/main/resources/application.properties
+++ b/spring/spring-jpa-audit/src/main/resources/application.properties
@@ -2,8 +2,7 @@ spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql: true
 
 ## Simulando o código das tabelas numa base de dados
-entidades.cidade=1
-entidades.cliente=2
+entitys={cidade: '1', cliente: '2'}
 
 ## H2 Database - Salvando em disco 
 spring.datasource.url=jdbc:h2:file:C:/digytal/database/h2db/spring-jpa-audit-db
