--- a/spring/spring-jpa-audit/src/main/resources/application.properties
+++ b/spring/spring-jpa-audit/src/main/resources/application.properties
@@ -1,18 +1,20 @@
 spring.jpa.hibernate.ddl-auto:update
 spring.jpa.show-sql: true
 
-## Simulando o código das tabelas numa base de dados
+## Simulando o cï¿½digo das tabelas numa base de dados
 entitys={cidade: '1', cliente: '2'}
 
 ## H2 Database - Salvando em disco 
-spring.datasource.url=jdbc:h2:file:C:/digytal/database/h2db/spring-jpa-audit-db
+# spring.datasource.url=jdbc:h2:file:C:/digytal/database/h2db/spring-jpa-audit-db
+# spring.datasource.url=jdbc:h2:file:/home/wolmir/dbh2teset
 
-## configuração de acesso ao banco de dados H2 
-#  spring.datasource.url=jdbc:h2:mem:easy-job-db
+## configuraï¿½ï¿½o de acesso ao banco de dados H2 
+spring.datasource.url=jdbc:h2:mem:easy-job-db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 ## PostgreSQL Database Connection Properties
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
